--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-8.58MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
-  - {name: 🇺🇸 美国-18.96MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
-  - {name: 🇯🇵 日本-606.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-308.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇯🇵 日本-7.81MB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-276.4KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 6a582cd4-559f-4874-98e7-76f3465412ae, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.91MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-4.77MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇻🇳 越南-8.85MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
   - {name: 🇻🇳 越南-8.73MB/s(Youtube:不良林), server: 103.166.143.196, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.143.196}}
   - {name: 未知国家-5.22MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-606.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
