--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-276.4KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 6a582cd4-559f-4874-98e7-76f3465412ae, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.91MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-4.77MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
+  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-4.89MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-18.96MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇻🇳 越南-8.58MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
+  - {name: 🇻🇳 越南-2.19MB/s(Youtube:不良林), server: 103.151.238.40, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.40}}
   - {name: 🇻🇳 越南-8.85MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
-  - {name: 🇻🇳 越南-8.73MB/s(Youtube:不良林), server: 103.166.143.196, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.143.196}}
   - {name: 未知国家-5.22MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
-  - {name: 未知国家-5.48MB/s(Youtube:不良林), server: 103.182.17.179, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.179}}
-  - {name: 🇻🇳 越南-8.88MB/s(Youtube:不良林), server: 103.166.140.109, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.109}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-276.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-18.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
-      - 未知国家-5.48MB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
