--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-444.0KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-666.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-1.11MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-646.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 阿联酋-4.89MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇰🇷 韩国-328.8KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.81MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-5.86MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
   - {name: 🇻🇳 越南-9.63MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
   - {name: 🇻🇳 越南-2.19MB/s(Youtube:不良林), server: 103.151.238.40, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.40}}
   - {name: 未知国家-5.22MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-444.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-666.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
+      - 阿联酋-4.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
       - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
       - 未知国家-5.22MB/s(Youtube:不良林)
