--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-646.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 185.160.26.35, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 阿联酋-4.89MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
-  - {name: 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇰🇷 韩国-328.8KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-597.4KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-267.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-3.81MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇺🇸 美国-5.86MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
   - {name: 🇻🇳 越南-9.63MB/s(Youtube:不良林), server: 103.166.140.106, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.106}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-646.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 阿联酋-4.89MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-328.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-597.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.86MB/s(Youtube:不良林)
       - 🇻🇳 越南-9.63MB/s(Youtube:不良林)
